--- a/111-1QZ1/111-1QZ1.csproj
+++ b/111-1QZ1/111-1QZ1.csproj
@@ -86,6 +86,8 @@
   </ItemGroup>
   <ItemGroup>
     <Content Include="answer.md" />
+    <Content Include="answer.md.PDF" />
+    <Content Include="answer.rar" />
     <None Include="packages.config" />
     <Content Include="readme.md" />
     <None Include="Web.Debug.config">
