--- a/111-1QZ1/111-1QZ1.csproj
+++ b/111-1QZ1/111-1QZ1.csproj
@@ -87,6 +87,7 @@
   <ItemGroup>
     <Content Include="answer.md.PDF" />
     <Content Include="answer.rar" />
+    <Content Include="answer.md" />
     <None Include="packages.config" />
     <Content Include="readme.md" />
     <None Include="Web.Debug.config">
